force-app/main/default/objects/Schedule__c/fields/Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>Cron_Exp__c</fullName>
    <label>Cron Exp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>