force-app/main/default/objects/Schedule__c/fields/GYNC_Batch_Variant__c.field-meta.xml
<CustomField>
    <fullName>GYNC_Batch_Variant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNC Batch Variant</label>
    <type>Checkbox</type>
</CustomField>