force-app/main/default/objects/Schedule__c/fields/GYNCF_Configuration_Record__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Configuration_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GYNCF Configuration Record</label>
    <referenceTo>GYNCO_Configuration__c</referenceTo>
    <relationshipLabel>Scheduler Records</relationshipLabel>
    <relationshipName>Scheduler_Records</relationshipName>
    <type>Lookup</type>
</CustomField>