force-app/main/default/objects/Schedule__c/fields/GYNCF_Day_of_Month_Selected__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Day_of_Month_Selected__c</fullName>
    <label>GYNCF Day of Month Selected</label>
    <length>3</length>
    <type>Text</type>
</CustomField>