force-app/main/default/objects/Schedule__c/fields/GYNCF_Days_Selected__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Days_Selected__c</fullName>
    <label>GYNCF Days Selected</label>
    <type>TextArea</type>
</CustomField>