force-app/main/default/objects/Schedule__c/fields/GYNCF_Everyday_Selected__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Everyday_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GYNCF Everyday Selected</label>
    <type>Checkbox</type>
</CustomField>