force-app/main/default/objects/Schedule__c/fields/GYNCF_Frequency_Selected__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Frequency_Selected__c</fullName>
    <label>GYNCF Frequency Selected</label>
    <length>2</length>
    <type>Text</type>
</CustomField>