force-app/main/default/objects/Schedule__c/fields/GYNCF_System_Id__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_System_Id__c</fullName>
    <label>GYNCF System Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>