force-app/main/default/objects/Schedule__c/fields/GYNCF_Time_Selected__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Time_Selected__c</fullName>
    <label>GYNCF Time Selected</label>
    <length>6</length>
    <type>Text</type>
</CustomField>